tests/fixtures/invalid/min_float_list.py
# Cannot call min() with Float, List[int]
x = min(1.0, [1, 2, 3])
